--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/op.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/run.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -355,7 +355,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://github.com/sharfs/Recipe-Project.git" data-lightbox="gallery-mf">
+            <a href="https://github.com/sharfs/Recipe-Project.git" target="_blank">
               <div class="work-img">
                 <img src="img/bro.jpg" alt="" class="img-fluid">
               </div>
@@ -377,7 +377,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://github.com/sharfs/Quiz.git" data-lightbox="gallery-mf">
+            <a href="https://github.com/sharfs/Quiz.git" target="_blank">
               <div class="work-img">
                 <img src="img/java.jpg" alt="" class="img-fluid">
               </div>
@@ -399,7 +399,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://github.com/sharfs/Vue-Quiz.git" data-lightbox="gallery-mf">
+            <a href="https://github.com/sharfs/Vue-Quiz.git" target="_blank">
               <div class="work-img">
                 <img src="img/vue.jpg" alt="" class="img-fluid">
               </div>
@@ -421,7 +421,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://github.com/sharfs/PHP-quiz.git" data-lightbox="gallery-mf">
+            <a href="https://github.com/sharfs/PHP-quiz.git" target="_blank">
               <div class="work-img">
                 <img src="img/php.jpg" alt="" class="img-fluid">
               </div>
@@ -443,7 +443,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="https://github.com/sharfs/To-Do-List.git" data-lightbox="gallery-mf">
+            <a href="https://github.com/sharfs/To-Do-List.git" target="_blank">
               <div class="work-img">
                 <img src="img/todo.jpg" alt="" class="img-fluid">
               </div>
@@ -465,7 +465,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-6.jpg" data-lightbox="gallery-mf">
+            <a href="" target="_blank">
               <div class="work-img">
                 <img src="img/hotel.jpg" alt="" class="img-fluid">
               </div>
@@ -487,7 +487,7 @@
         </div>
         <div class="col-md-4">
             <div class="work-box">
-              <a href="https://github.com/sharfs/Vue-Quiz.git" data-lightbox="gallery-mf">
+              <a href="" target="_blank">
                 <div class="work-img">
                   <img src="img/show.jpg" alt="" class="img-fluid">
                 </div>
@@ -509,7 +509,7 @@
           </div>
           <div class="col-md-4">
               <div class="work-box">
-                <a href="https://github.com/sharfs/Vue-Quiz.git" data-lightbox="gallery-mf">
+                <a href="" target="_blank">
                   <div class="work-img">
                     <img src="img/rout.jpg" alt="" class="img-fluid">
                   </div>
