--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Despite enjoying web design and development, and doing projects such as this one, I love makeup and the art thereof. I love doing makeup on people for events and started my own business called <strong>MakeupByS</strong> where I'd advertise my services for matric balls and weddings and is still something I would always do alongside coding. 
+                    Despite enjoying web design and development and doing projects such as this one, I love makeup and the art thereof. I love doing makeup for people for events and started my own business called <strong>MakeupByS</strong> where I have advertised my services for matric balls and weddings and this is still something I would always do alongside coding. 
                   </p>
                   <p class="lead">
-                    I enjoy reading and learning new things, such as DIY and trying to solve fun, yet tricky maths problems and riddles. I am hard-working and reliable. Family is a big part of my life and I do believe that their efforts have helped shaped me into who I am today.
+                    I enjoy reading and learning new things, such as DIY and trying to solve fun, yet tricky maths problems and riddles. I am hard-working and reliable. Family is a big part of my life and I do believe that their efforts have helped shape me into who I am today.
                   </p>
                   <p class="lead">
                     I have thus far completed 6+ coding projects which are all displayed at the Portfolio section of this CV and thoroughly enjoy the front-end and back-end part of Web Design and Development.
@@ -192,7 +192,7 @@
             <div class="service-content">
               <h2 class="s-title">CodeSpace</h2>
               <p class="s-description text-center">
-                Feb 2019- June 2019<br> Certificate in Web Development and Design. Focused on language such as HTML, CSS, JavaScript, PHP, MySQL, etc.<br> Contact Tegan Cross: tegan@codespace.co.za. 
+                Feb 2019- June 2019<br> Certificate in Web Development and Design. Focused on languages such as HTML, CSS, JavaScript, PHP, MySQL, etc.<br> Contact Tegan Cross: tegan@codespace.co.za. 
               </p>
             </div>
           </div>
@@ -219,7 +219,7 @@
             <div class="service-content">
               <h2 class="s-title">South Peninsula High School</h2>
               <p class="s-description text-center">
-                2014- 2018<br> NSC achieved.<br>
+                2014- 2018<br> NSC achieved. Bachelor's pass.<br>
                 Contact Mr. Zeid Baker: admin@sphigh.org.
               </p>
             </div>
