--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet">
 
   <!-- =======================================================
     Theme Name: DevFolio
@@ -465,7 +466,7 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="" target="_blank">
+            <a href="https://github.com/sharfs/hotel-booking-form.git" target="_blank">
               <div class="work-img">
                 <img src="img/hotel.jpg" alt="" class="img-fluid">
               </div>
@@ -485,6 +486,30 @@
             </a>
           </div>
         </div>
+
+        <div class="col-md-4">
+          <div class="work-box">
+            <a href="" target="_blank">
+              <div class="work-img">
+                <img src="img/todoo.jpg" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">To-Do List OOP</h2>
+                    
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        
         <div class="col-md-4">
             <div class="work-box">
               <a href="" target="_blank">
