--- a/index.html
+++ b/index.html
@@ -630,13 +630,13 @@
                   </div><br><br>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://za.linkedin.com/in/sharfaa-sedick-463972183"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://www.instagram.com/sharfaaanthony/?hl=en"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="https://twitter.com/search?q=sharfaasedick&src=typd"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
-                      <li><a href="https://za.pinterest.com/sharfaasedick/"><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
-                      <li><a href="https://github.com/"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
-                      <li><a href="https://www.youtube.com/channel/UCETsw_uzIJNOmQxzcXr7FYA?view_as=subscriber"><span class="ico-circle"><i class="ion-social-youtube"></i></span></a></li>
-                      <li><a href="https://www.google.com/search?ei=muGtXPiAO8K8afnVoPAK&q=sharfaa+sedick&oq=sharfaa+sedick&gs_l=psy-ab.3..33i160.3660.7096..7757...0.0..0.375.3925.2-8j5......0....1..gws-wiz.......35i39j0j0i30j0i10i30.0PyXz1gdDLk"><span class="ico-circle"><i class="ion-social-google"></i></span></a></li>
+                      <li><a href="https://za.linkedin.com/in/sharfaa-sedick-463972183" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/sharfaaanthony/?hl=en" target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://twitter.com/search?q=sharfaasedick&src=typd" target="_blank"><span class="ico-circle"><i class="ion-social-twitter"></i></span></a></li>
+                      <li><a href="https://za.pinterest.com/sharfaasedick/" target="_blank"><span class="ico-circle"><i class="ion-social-pinterest"></i></span></a></li>
+                      <li><a href="https://github.com/" target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://www.youtube.com/channel/UCETsw_uzIJNOmQxzcXr7FYA?view_as=subscriber" target="_blank"><span class="ico-circle"><i class="ion-social-youtube"></i></span></a></li>
+                      <li><a href="https://www.google.com/search?ei=muGtXPiAO8K8afnVoPAK&q=sharfaa+sedick&oq=sharfaa+sedick&gs_l=psy-ab.3..33i160.3660.7096..7757...0.0..0.375.3925.2-8j5......0....1..gws-wiz.......35i39j0j0i30j0i10i30.0PyXz1gdDLk" target="_blank"><span class="ico-circle"><i class="ion-social-google"></i></span></a></li>
                     </ul>
                   </div>
                 </div>
