--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!--/ Nav End /-->
 
   <!--/ Intro Skew Star /-->
-  <div id="home" class="intro route bg-image" style="background-image: url(img/run.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/domm.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
@@ -97,46 +97,52 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/opo.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Sharfaa Anthony</span></p>
-                      <p><span class="title-s">Profile: </span> <span>Full stack web developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>sharfaasedick@gmail.com.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(061) 401 9135</span></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
-                  <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">100% completed</span>
+                  <p class="title-s">Skills</p>
+                  <span>HTML5</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">100% completed</span>
+                  <span>CSS3</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">100% completed</span>
+                  <span>PHP</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">100% completed</span>
+                  <span>JAVASCRIPT</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>MySQL</span> <span class="pull-right">100% completed</span>
+                  <span>MySQL</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>MICROSOFT OFFICE</span> <span class="pull-right">100% completed</span>
+                  <span>MICROSOFT OFFICE</span> <span class="pull-right"></span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>GitHub</span> <span class="pull-right"></span>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>BootStrap</span> <span class="pull-right"></span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
@@ -623,7 +629,7 @@
                       Contact me or follow me on any of my social media tags down below!
                     </p>
                     <ul class="list-ico">
-                      <li><span class="ion-ios-location"></span> 6 Gail Road Retreat, Cape Town, 7945</li>
+                      <li><span class="ion-ios-location"></span>Retreat, Cape Town, 7945</li>
                       <li><span class="ion-ios-telephone"></span> (061) 401-9135</li>
                       <li><span class="ion-email"></span> sharfaasedick@gmail.com</li>
                     </ul>
